# OSMP-Operating-System-Message-Passing

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LOGLog1.txt  LOGLog2.txt  LOGLog3.txt  LOGLog4.txt  Log1.txt  Log10.txt  Log11.txt  Log12.txt  Log13.txt  Log14.txt  Log15.txt  Log16.txt  Log17.txt  Log18.txt  Log19.txt  Log2.txt  Log20.txt  Log21.txt  Log22.txt  Log23.txt  Log24.txt  Log25.txt  Log26.txt  Log27.txt  Log28.txt  Log3.txt  Log4.txt  Log5.txt  Log6.txt  Log7.txt  Log8.txt  Log9.txt  Makefile  README.md  demo.c  demo.h  gccall.sh  (+7 more)
Lib/Echoall/: echoall  echoall.c
OSMP/: .gitignore  OSMP.h  README.md
OSMP/OSMPExecutable/: osmpIsendIrecieve.c  osmpbarrier  osmpbarriertest.c  osmpbcast  osmpbcast.c  osmpexecutable  osmpexecutable copy.c  osmpexecutable.c  osmpexecutable.h  osmpexecutablesemaphore.c  osmpsendrecieve  osmpsendrecieve.c  osmptwosendonerecieve
OSMP/OSMPLib/: osmplib.c  osmplib.h
OSMP/OSMPStarter/: osmprun  osmprun.c  osmprun.h
logs/: Log1.txt  Log10.txt  Log11.txt  Log12.txt  Log13.txt  Log14.txt  Log15.txt  Log16.txt  Log17.txt  Log18.txt  Log19.txt  Log2.txt  Log20.txt  Log21.txt  Log22.txt  Log23.txt  Log24.txt  Log25.txt  Log26.txt  Log27.txt  Log28.txt  Log29.txt  Log3.txt  Log30.txt  Log31.txt  Log32.txt  Log33.txt  Log34.txt  Log35.txt  Log36.txt  Log37.txt  Log38.txt  Log39.txt  Log4.txt  Log40.txt  Log41.txt  Log42.txt  Log43.txt  Log44.txt  Log45.txt  (+57 more)
output/: echoall  main  osmpexecutable  osmprun  osmprun.
src/: OSMP.h  OSMPlib.h  echoall.c  echoall.h  main.c  osmpexec1.c  osmpexec1.h  osmplib.c  osmplib.h  osmprun.c  osmprun.h  waitpid.c
src/examples/: size.c
